added JazzVcs Extension

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,38 +1,64 @@
 <idea-plugin>
-  <id>at.dotti.intellij.plugins.jazz</id>
-  <name>JazzPlugin</name>
-  <version>1.0</version>
-  <vendor email="stefan@dotti.at" url="https://www.dotti.at">dotti.at</vendor>
+    <id>at.dotti.intellij.plugins.jazz</id>
+    <name>JazzPlugin</name>
+    <version>1.0</version>
+    <category>VCS Integration</category>
+    <vendor email="stefan@dotti.at" url="https://www.dotti.at">dotti.at</vendor>
 
-  <description><![CDATA[
+    <description><![CDATA[
       This plugin uses the IBM Jazz Command Line client to connect to the Jazz Workflow Server.
     ]]></description>
 
-  <change-notes><![CDATA[
+    <change-notes><![CDATA[
       Version Changes:
       <ul>
         <li>0.0.1: my first version</li>
       </ul>
     ]]>
-  </change-notes>
+    </change-notes>
 
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="173.0"/>
+    <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
+    <idea-version since-build="173.0"/>
 
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
-       on how to target different products -->
-  <depends>com.intellij.modules.platform</depends>
+    <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
+         on how to target different products -->
+    <depends>com.intellij.modules.vcs</depends>
 
-  <extensions defaultExtensionNs="com.intellij">
-    <!-- Add your extensions here -->
-      <applicationService serviceImplementation="at.dotti.intellij.plugins.jazz.settings.SettingsBean" />
-      <applicationConfigurable instance="at.dotti.intellij.plugins.jazz.settings.SettingsForm"
-            groupId="tools"
-      />
-  </extensions>
+    <project-components>
+        <component>
+            <interface-class>at.dotti.intellij.plugins.jazz.project.JazzProject</interface-class>
+            <implementation-class>at.dotti.intellij.plugins.jazz.project.JazzProjectImpl</implementation-class>
+        </component>
+        <component>
+            <interface-class>com.intellij.openapi.vcs.actions.VcsContextFactory</interface-class>
+            <implementation-class>at.dotti.intellij.plugins.jazz.vcs.JazzContextFactory</implementation-class>
+        </component>
+    </project-components>
 
-  <actions>
-    <!-- Add your actions here -->
-  </actions>
+    <extensions defaultExtensionNs="com.intellij">
+        <!-- Add your extensions here -->
+        <applicationService serviceImplementation="at.dotti.intellij.plugins.jazz.settings.SettingsBean"/>
+        <applicationConfigurable instance="at.dotti.intellij.plugins.jazz.settings.SettingsForm"
+                                 groupId="tools"
+        />
+        <vcs name="jazz" vcsClass="at.dotti.intellij.plugins.jazz.vcs.JazzVcs" displayName="Jazz"
+             administrativeAreaName=".jazz5, .jazzShed"/>
+        <checkoutProvider implementation="at.dotti.intellij.plugins.jazz.vcs.JazzCheckoutProvider"/>
+        <vcsCheckinHandlerFactory implementation="at.dotti.intellij.plugins.jazz.vcs.JazzCheckinHandlerFactory"/>
+    </extensions>
+
+    <actions>
+        <action id="jazz.actions.browse"
+                class="at.dotti.intellij.plugins.jazz.actions.BrowseRepositoryAction">
+            <add-to-group group-id="Vcs.Browse"/>
+        </action>
+
+        <group id="org.intellij.sdk.action.GroupedActions" text="Jazz Repository">
+            <add-to-group group-id="VcsGroups" anchor="last"/>
+            <action class="at.dotti.intellij.plugins.jazz.actions.CheckoutAction" description="Checkout from Jazz"
+                    text="Checkout" id="jazz.actions.checkout">
+            </action>
+        </group>
+    </actions>
 
 </idea-plugin>
