--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -24,6 +24,8 @@
          on how to target different products -->
     <depends>com.intellij.modules.vcs</depends>
 
+    <resource-bundle>messages.JazzBundle</resource-bundle>
+
     <project-components>
         <component>
             <interface-class>at.dotti.intellij.plugins.jazz.project.JazzProject</interface-class>
@@ -48,17 +50,19 @@
     </extensions>
 
     <actions>
-        <action id="jazz.actions.browse"
-                class="at.dotti.intellij.plugins.jazz.actions.BrowseRepositoryAction">
-            <add-to-group group-id="Vcs.Browse"/>
-        </action>
-
-        <group id="org.intellij.sdk.action.GroupedActions" text="Jazz Repository">
-            <add-to-group group-id="VcsGroups" anchor="last"/>
-            <action class="at.dotti.intellij.plugins.jazz.actions.CheckoutAction" description="Checkout from Jazz"
-                    text="Checkout" id="jazz.actions.checkout">
-            </action>
+        <group id="JazzFilePopupGroup" popup="true" class="at.dotti.intellij.plugins.jazz.actions.JazzGroup">
+            <add-to-group group-id="VcsGroup" anchor="last"/>
+            <add-to-group group-id="VcsGlobalGroup" anchor="after" relative-to-action="Vcs.Specific"/>
         </group>
+
+        <group id="JazzGroup">
+            <action id="Jazz.Deliver" class="at.dotti.intellij.plugins.jazz.actions.Deliver"/>
+            <add-to-group group-id="JazzFilePopupGroup" anchor="last"/>
+        </group>
+
+        <reference id="Jazz.Deliver">
+            <add-to-group group-id="ChangesViewPopupMenu" anchor="after" relative-to-action="Diff.ShowDiff"/>
+        </reference>
     </actions>
 
 </idea-plugin>
