--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -13,6 +13,8 @@
       Version Changes:
       <ul>
         <li>0.0.1: my first version</li>
+        <li>0.0.3: fixed npe when no settingsbean is present</li>
+        <li>0.0.3.1: fixed npe</li>
       </ul>
     ]]>
     </change-notes>
