some bugfixes, open version 201.*

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,15 +12,22 @@ runGenerators = true
 
 pluginGroup = at.dotti.intellij.plugins.jazz
 pluginName = JazzPlugin
-pluginVersion = 0.0.1
-pluginSinceBuild = 172.1909.2
-pluginUntilBuild = 201
+pluginVersion = 0.0.4.2
+pluginSinceBuild = 192.7142.36
+pluginUntilBuild = 201.*
 
 publishPluginId = 8540
-publishUsername = stefandotti
-publishToken =
-publishChannel =
+publishUsername = stefan.dotti@shark-soft.com
+publishToken = perm:c3RlZmFuLmRvdHRp.OTItMTcyNA==.GFRMI5IBjMvr1G6586Cz6M4E1Lp7dX
+publishChannel = alpha
 
 org.gradle.jvmargs=-XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled -XX:+HeapDumpOnOutOfMemoryError -Xmx1024m -Dfile.encoding=utf-8
 
 idePath =
+
+#systemProp.http.proxyHost=proxy1.brz.gv.at
+#systemProp.http.proxyPort=8080
+#systemProp.http.nonProxyHosts=localhost
+#systemProp.https.proxyHost=proxy1.brz.gv.at
+#systemProp.https.proxyPort=8080
+#systemProp.https.nonProxyHosts=localhost
