--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -3,9 +3,9 @@ distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-5.2.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-#systemProp.http.proxyHost=proxy2.brz.gv.at
-#systemProp.http.proxyPort=8080
-#systemProp.http.nonProxyHosts=localhost
-#systemProp.https.proxyHost=proxy2.brz.gv.at
-#systemProp.https.proxyPort=8080
-#systemProp.https.nonProxyHosts=localhost
+systemProp.http.proxyHost=proxy1.brz.gv.at
+systemProp.http.proxyPort=8080
+systemProp.http.nonProxyHosts=localhost
+systemProp.https.proxyHost=proxy1.brz.gv.at
+systemProp.https.proxyPort=8080
+systemProp.https.nonProxyHosts=localhost
