--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,8 @@ isEAP = false
 runGenerators = true
 
 pluginGroup = at.dotti.intellij.plugins.jazz
-pluginName = JazzPlugin
-pluginVersion = 0.0.5.1
+pluginName = Jazz
+pluginVersion = 0.0.5.3
 pluginSinceBuild = 192.7142.36
 pluginUntilBuild = 202.*
 
