--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin>
     <id>at.dotti.intellij.plugins.jazz</id>
-    <name>JazzPlugin</name>
+    <name>Jazz</name>
     <version>1.0</version>
     <category>VCS Integration</category>
     <vendor email="stefan@dotti.at" url="https://www.dotti.at">dotti.at</vendor>
@@ -18,6 +18,7 @@
         <li>0.0.4: json ignore unknown properties; progress indication on status update</li>
         <li>0.0.5.0: added resync action</li>
         <li>0.0.5.1: upgraded to match intellij version 2020.2</li>
+        <li>0.0.5.3: changed the name to Jazz only
       </ul>
     ]]>
     </change-notes>
