--- a/gradle.properties
+++ b/gradle.properties
@@ -2,19 +2,19 @@
 # https://www.jetbrains.com/intellij-repository/releases
 # https://www.jetbrains.com/intellij-repository/snapshots
 
-ideaVersion = 193.5233.102
+ideaVersion = 211.7442.40
 ideaType = IC
-javaVersion = 1.8
-javaTargetVersion = 1.8
+javaVersion = 11
+javaTargetVersion = 11
 sources = true
 isEAP = false
 runGenerators = true
 
 pluginGroup = at.dotti.intellij.plugins.jazz
 pluginName = Jazz
-pluginVersion = 0.0.5.3
-pluginSinceBuild = 192.7142.36
-pluginUntilBuild = 202.*
+pluginVersion = 0.0.6.0
+pluginSinceBuild = 203.5419.21
+pluginUntilBuild = 211.7442.40
 
 publishPluginId = 8540
 publishUsername = stefan.dotti@shark-soft.com
