workspace info panel

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,9 +12,9 @@ runGenerators = true
 
 pluginGroup = at.dotti.intellij.plugins.jazz
 pluginName = Jazz
-pluginVersion = 0.0.6.0
+pluginVersion = 0.0.7.0
 pluginSinceBuild = 203.5419.21
-pluginUntilBuild = 211.7442.40
+pluginUntilBuild = 211.*
 
 publishPluginId = 8540
 publishUsername = stefan.dotti@shark-soft.com
