--- a/resources/messages/JazzBundle.properties
+++ b/resources/messages/JazzBundle.properties
@@ -2,3 +2,13 @@ group.JazzGroup.text=_Jazz
 group.JazzFilePopupGroup.text=_Jazz
 action.Jazz.Deliver.text=Deliver
 action.Jazz.Resync.text=Resync
+action.Jazz.RefreshWorkspace.text=Refresh
+toolwindow.working.copies.info.title=Workspace Information
+jazz.roots.detection.errors.found.description=Workspace Roots Failure
+jazz.roots.detection.errors.found.action.text=Clean Your Workspace
+dialog.show.jazz.map.title=Workspace
+jazz.notification.group.name=Jazz notification group
+jazz.workspace.outofsync=Jazz workspace is out of sync
+jazz.incoming=Incoming Changes
+jazz.workspace=Workspace
+jazz.outgoing=Outgoing Changes
