--- a/resources/messages/JazzBundle.properties
+++ b/resources/messages/JazzBundle.properties
@@ -12,3 +12,4 @@ jazz.workspace.outofsync=Jazz workspace is out of sync
 jazz.incoming=Incoming Changes
 jazz.workspace=Workspace
 jazz.outgoing=Outgoing Changes
+jazz.status.loading=Status is loading
